# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: flake8_lint.yml  tests.yaml
page_loader/: page_loader.py
page_loader/scripts/: page_loader.py
tests/: test_1.py  test_2.py
tests/fixtures/: for_ref_page-loader-hexlet-repl-co.html  hexlet_courses.html  ru-code-basics-com.html  tests.html
tests/fixtures/ru-code-basics-com_files/: 712-be59072a5e210c52decb.js  93-c71df16e48a24609fd5d.js  application-466f868e.css  application-80105183acb7588f258a.js  runtime-e71274afffc99e61f406.js
