[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = "Download from link"
authors = ["Mqtaw <mqtaw@yandex.ru>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
progress = "^1.5"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
requests-mock = "^1.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
